--- a/bosa/inc/customizer/customizer.css
+++ b/bosa/inc/customizer/customizer.css
@@ -182,6 +182,10 @@ input, textarea {
     background-color: #0071a1;
     border-color: #0071a1;
 }
+#customize-theme-controls #accordion-section-theme_upsell .accordion-section-title:after,
+#customize-theme-controls #accordion-section-theme_getting_started .accordion-section-title:after{ 
+    display: none;
+}
 .iris-picker .iris-strip {
     width: 18px !important;
 }
