--- a/bosa/inc/theme-info/assets/css/theme-info.css
+++ b/bosa/inc/theme-info/assets/css/theme-info.css
@@ -214,7 +214,7 @@
 	position: absolute;
 	bottom: -1px;
 	right: -1px;
-	padding: 9px 10px 10px;
+	padding: 9px 10px 8px;
 	background: #f6f6f6;
 	border: 1px solid rgba(0, 0, 0, .1);
 }
@@ -222,7 +222,7 @@
 	background: #2c2e2f;
 	bottom: 0;
 	right: -1px;
-	padding: 9px 10px 9px;
+	padding: 8px 10px;
 }
 .info-wrap .col-wrap {
 	margin: 0 -15px;
@@ -347,7 +347,27 @@ pre.changelog {
 }
 
 
-@media only screen and (max-width: 479px) { 
+@media only screen and (max-width: 782px) { 
+	.plugin_box .action_button .button{
+		padding: 7px 14px;
+		margin: 0;
+		line-height: 1;
+		font-size: 13px;
+		min-height: auto;
+	}
+}
+@media only screen and (max-width: 768px) { 
+	.about-wrap {
+		margin: 25px 20px 0 20px;
+	}
+	.info-wrap .col-wrap .col {
+		width: 50%;
+	}
+	.info-wrap .feature-section .col:nth-child(3n + 1) {
+     clear: none; 
+	}
+}
+@media only screen and (max-width: 576px) { 
 	.info-wrap .col-wrap .col {
 		width: 100%;
 	}
