--- a/bosa/style.css
+++ b/bosa/style.css
@@ -4,7 +4,7 @@ Theme URI: https://bosathemes.com/bosa
 Author: Bosa Themes
 Author URI: https://bosathemes.com
 Description: Bosa is multipurpose theme with beautifully crafted design. Bosa is beautiful, fast, lightweight, responsive, extremely customizable, multipurpose theme that you can use as a foundation to build versatile sites such as business, startups, business agencies, corporate, law firms, blog, portfolio, travel, education, fitness, university portal, church, restaurant, medical, shop, magazines, finance, accounting, consulting and preferably ideal for any type of sites. Bosa works perfectly with Gutenberg and the most popular page builder Elementor that can easily drag-and-drop your ideas from the interface. Bosa is built with SEO, speed, and usability in mind with the multiple Header & Footer layouts, predesigned starter sites includes awesome Home & Inner Pages that is incredibly customizable and powerful enough to take a stand among the crowd. Bosa is compatible with all major plugins like WooCommerce, Yoast, Contact form 7, Mailchimp for WordPress, bbPress, etc. Looking for a Multipurpose theme? Look no further!
-Version: 1.5.7
+Version: 1.5.8
 Requires PHP: 5.6
 Tested up to: 6.7
 License: GNU General Public License v3 or later
@@ -7154,6 +7154,7 @@ body .a2a_menu .a2a_menu_show_more_less span {
 }
 .woocommerce .entry-summary .quantity input[type=number] {
   height: 100%;
+  min-height: 45px;
   margin-right: 15px;
   width: 70px;
 }
@@ -7353,6 +7354,9 @@ body .a2a_menu .a2a_menu_show_more_less span {
 }
 .woocommerce nav.woocommerce-pagination ul.page-numbers li .page-numbers:hover, .woocommerce nav.woocommerce-pagination ul.page-numbers li .page-numbers:focus, .woocommerce nav.woocommerce-pagination ul.page-numbers li .page-numbers:active, .woocommerce nav.woocommerce-pagination ul.page-numbers li .page-numbers.current {
   color: #ffffff;
+}
+.woocommerce nav.woocommerce-pagination ul.page-numbers li .next, .woocommerce nav.woocommerce-pagination ul.page-numbers li .prev {
+  padding-bottom: 10px;
 }
 
 .woocommerce .woocommerce-MyAccount-navigation ul {
@@ -7586,7 +7590,8 @@ h2.wc-block-featured-product__title {
   transition: all 0.4s;
 }
 
-body .woocommerce .col2-set [class*=col-], body.woocommerce-page .col2-set .col-1[class*=col-] {
+body .woocommerce .col2-set [class*=col-],
+body.woocommerce-page .col2-set .col-1[class*=col-] {
   padding: 0;
   -ms-flex: inherit;
   flex: inherit;
@@ -7847,6 +7852,37 @@ body[class*=woocommerce] ul.products li .woo-product-image a {
 body[class*=woocommerce] ul.products li .product-compare {
   margin-right: 8px;
 }
+body[class*=woocommerce] ul.products li .product-wishlist .yith-add-to-wishlist-button-block {
+  display: block;
+  position: static;
+  margin: 0;
+  width: 0;
+}
+body[class*=woocommerce] ul.products li .product-wishlist .yith-wcwl-add-to-wishlist-button {
+  background-color: #ffffff;
+  line-height: 35px;
+  height: 35px;
+  text-align: center;
+  width: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+body[class*=woocommerce] ul.products li .product-wishlist .yith-wcwl-add-to-wishlist-button svg {
+  color: #383838;
+  display: block;
+  text-align: center;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  font-size: 12px;
+  margin: 0;
+  width: 15px;
+  stroke-width: 2px;
+  vertical-align: middle;
+}
 body[class*=woocommerce] ul.products li .product-compare-wishlist {
   position: absolute;
   left: 0;
@@ -7864,7 +7900,8 @@ body[class*=woocommerce] ul.products li .product-compare-wishlist a {
   display: block;
   z-index: 1;
 }
-body[class*=woocommerce] ul.products li .product-compare-wishlist a i {
+body[class*=woocommerce] ul.products li .product-compare-wishlist a i,
+body[class*=woocommerce] ul.products li .product-compare-wishlist a svg {
   color: #383838;
   display: block;
   text-align: center;
@@ -7874,6 +7911,77 @@ body[class*=woocommerce] ul.products li .product-compare-wishlist a i {
   -o-transition: all 0.3s;
   transition: all 0.3s;
   font-size: 12px;
+  margin: 0;
+}
+body[class*=woocommerce] ul.products li .product-compare-wishlist .yith-wcwl-add-button {
+  display: block;
+  position: initial;
+}
+body[class*=woocommerce] ul.products li .product-compare-wishlist .yith-wcwl-add-button .add_to_wishlist {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+body[class*=woocommerce] ul.products li .product-compare-wishlist .yith-wcwl-add-button .add_to_wishlist svg {
+  margin: 0;
+  width: 15px;
+  stroke-width: 2px;
+  vertical-align: middle;
+}
+body[class*=woocommerce] ul.products li .product-compare-wishlist .yith-wcwl-add-button .add_to_wishlist:not(:has(.info-tooltip)) span {
+  background-color: #1a1a1a;
+  color: #ffffff;
+  font-size: 11px;
+  line-height: 1.3;
+  padding: 4px 10px;
+  position: absolute;
+  top: -25px;
+  text-align: center;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+  -moz-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  -o-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
+  white-space: nowrap;
+  visibility: hidden;
+  z-index: 1;
+  -webkit-transition: top 0.4s;
+  -moz-transition: top 0.4s;
+  -ms-transition: top 0.4s;
+  -o-transition: top 0.4s;
+  transition: top 0.4s;
+}
+body[class*=woocommerce] ul.products li .product-compare-wishlist .yith-wcwl-add-button .add_to_wishlist:hover span {
+  top: -35px;
+  visibility: visible;
+}
+
+.product-wishlist .feedback,
+.yith-wcwl-add-to-wishlist .feedback {
+  background-color: rgba(255, 255, 255, 0.8);
+  position: absolute;
+  top: 30%;
+  display: inline-block;
+  padding: 2px 10px;
+  margin-left: 7.5%;
+  margin-right: 7.5%;
+  -webkit-transform: translate(0, -50%);
+  -moz-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  -o-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  text-align: center;
+  font-size: 13px;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  opacity: 0;
+}
+.product-wishlist .feedback i, .product-wishlist .feedback svg,
+.yith-wcwl-add-to-wishlist .feedback i,
+.yith-wcwl-add-to-wishlist .feedback svg {
+  display: none;
 }
 
 .woocommerce div.product div.images .flex-control-thumbs {
@@ -7911,6 +8019,10 @@ body[class*=woocommerce] ul.products li .product-compare-wishlist a i {
 .woocommerce div.product form.cart {
   margin-bottom: 30px;
   float: left;
+}
+
+.woocommerce div.product form.variations_form {
+  float: none;
 }
 
 .summary .yith-wcwl-add-to-wishlist {
@@ -7977,15 +8089,88 @@ body[class*=woocommerce] ul.products li .product-compare-wishlist a i {
   }
 }
 
+.summary .yith-add-to-wishlist-button-block a:has(svg),
+.summary .yith-wcwl-add-to-wishlist a:has(svg) {
+  border: 1px solid #d9d9d9;
+  border-radius: 0;
+  height: 45px;
+  line-height: 45px;
+  width: 45px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 20px;
+  margin-top: 10px;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.summary .yith-add-to-wishlist-button-block a:has(svg) svg.yith-wcwl-icon-svg,
+.summary .yith-wcwl-add-to-wishlist a:has(svg) svg.yith-wcwl-icon-svg {
+  margin: 0;
+  width: 17px;
+  color: #383838;
+  stroke-width: 2.5;
+}
+.summary .yith-add-to-wishlist-button-block a:has(svg):hover,
+.summary .yith-wcwl-add-to-wishlist a:has(svg):hover {
+  border-color: #086abd;
+}
+.summary .yith-add-to-wishlist-button-block a:has(svg):hover svg.yith-wcwl-icon-svg,
+.summary .yith-wcwl-add-to-wishlist a:has(svg):hover svg.yith-wcwl-icon-svg {
+  color: #086abd;
+}
+@media screen and (max-width: 575px) {
+  .summary .yith-add-to-wishlist-button-block a:has(svg),
+.summary .yith-wcwl-add-to-wishlist a:has(svg) {
+    margin-left: 8px;
+    width: 40px;
+  }
+}
+
+.summary .yith-add-to-wishlist-button-block {
+  float: left;
+  margin: 0;
+  display: inline-block;
+  width: auto;
+}
+.summary .yith-add-to-wishlist-button-block a.yith-wcwl-add-to-wishlist-button:has(svg) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px 0 0 20px;
+}
+@media screen and (max-width: 575px) {
+  .summary .yith-add-to-wishlist-button-block a.yith-wcwl-add-to-wishlist-button:has(svg) {
+    margin-left: 8px;
+    width: 40px;
+  }
+}
+
+.summary:has(.variations_form) a.compare.button, .summary:has(.variations_form) .yith-wcwl-add-to-wishlist a:has(svg),
+.summary:has(.variations_form) .yith-add-to-wishlist-button-block a.yith-wcwl-add-to-wishlist-button:has(svg),
+.summary:has(.variations_form) .yith-wcwl-add-to-wishlist i {
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+.summary:has(.variations_form) .yith-wcwl-add-to-wishlist a:has(svg),
+.summary:has(.variations_form) .yith-add-to-wishlist-button-block a.yith-wcwl-add-to-wishlist-button:has(svg),
+.summary:has(.variations_form) .yith-wcwl-add-to-wishlist i {
+  margin-left: 0;
+}
+
 .woocommerce .entry-summary a.compare.button {
   background-color: transparent;
   padding: 0;
 }
 
-.info-tooltip {
+.info-tooltip, .yith-wcwl-add-to-wishlist-button__label {
   background-color: #1a1a1a;
   color: #ffffff;
   font-size: 11px;
+  line-height: initial;
   padding: 4px 10px;
   position: absolute;
   top: -25px;
@@ -8006,7 +8191,7 @@ body[class*=woocommerce] ul.products li .product-compare-wishlist a i {
   transition: top 0.4s;
 }
 
-.product-compare-wishlist a:hover .info-tooltip {
+.product-compare-wishlist a:hover .info-tooltip, .product-compare-wishlist a:hover .yith-wcwl-add-to-wishlist-button__label {
   top: -35px;
   visibility: visible;
 }
@@ -8050,40 +8235,6 @@ body[class*=woocommerce] ul.products li .product-compare-wishlist a i {
   font-family: FontAwesome;
   font-weight: 400;
   font-size: 13px;
-}
-
-.product-wishlist {
-  margin-right: 8px;
-}
-
-.product-wishlist .yith-wcwl-add-button > a i,
-.yith-wcwl-add-to-wishlist .yith-wcwl-add-button > a i {
-  margin-right: 0;
-}
-.product-wishlist .feedback,
-.yith-wcwl-add-to-wishlist .feedback {
-  background-color: rgba(255, 255, 255, 0.8);
-  position: absolute;
-  top: 30%;
-  display: inline-block;
-  padding: 2px 10px;
-  margin-left: 7.5%;
-  margin-right: 7.5%;
-  -webkit-transform: translate(0, -50%);
-  -moz-transform: translate(0, -50%);
-  -ms-transform: translate(0, -50%);
-  -o-transform: translate(0, -50%);
-  transform: translate(0, -50%);
-  text-align: center;
-  font-size: 13px;
-  left: 0;
-  right: 0;
-  z-index: 10;
-  opacity: 0;
-}
-.product-wishlist .feedback i,
-.yith-wcwl-add-to-wishlist .feedback i {
-  display: none;
 }
 
 .woocommerce .product .product-inner a.yith-wcqv-button {
