--- a/bosa/style.css
+++ b/bosa/style.css
@@ -4,7 +4,7 @@ Theme URI: https://bosathemes.com/bosa
 Author: Bosa Themes
 Author URI: https://bosathemes.com
 Description: Bosa is multipurpose theme with beautifully crafted design. Bosa is beautiful, fast, lightweight, responsive, extremely customizable, multipurpose theme that you can use as a foundation to build versatile sites such as business, startups, business agencies, corporate, law firms, blog, portfolio, travel, education, fitness, university portal, church, restaurant, medical, shop, magazines, finance, accounting, consulting and preferably ideal for any type of sites. Bosa works perfectly with Gutenberg and the most popular page builder Elementor that can easily drag-and-drop your ideas from the interface. Bosa is built with SEO, speed, and usability in mind with the multiple Header & Footer layouts, predesigned starter sites includes awesome Home & Inner Pages that is incredibly customizable and powerful enough to take a stand among the crowd. Bosa is compatible with all major plugins like WooCommerce, Yoast, Contact form 7, Mailchimp for WordPress, bbPress, etc. Looking for a Multipurpose theme? Look no further!
-Version: 1.5.9
+Version: 1.6.0
 Requires PHP: 5.6
 Tested up to: 6.7
 License: GNU General Public License v3 or later
@@ -4234,6 +4234,7 @@ body.offcanvas-slide-open .header-thirteen #offcanvas-menu {
 
 .header-category-nav .navbar-nav li {
   list-style: none;
+  position: relative;
 }
 
 .header-category-nav .navbar-nav li a {
