--- a/bosa/style.css
+++ b/bosa/style.css
@@ -4,15 +4,15 @@ Theme URI: https://bosathemes.com/bosa
 Author: Bosa Themes
 Author URI: https://bosathemes.com
 Description: Bosa is multipurpose theme with beautifully crafted design. Bosa is beautiful, fast, lightweight, responsive, extremely customizable, multipurpose theme that you can use as a foundation to build versatile sites such as business, startups, business agencies, corporate, law firms, blog, portfolio, travel, education, fitness, university portal, church, restaurant, medical, shop, magazines, finance, accounting, consulting and preferably ideal for any type of sites. Bosa works perfectly with Gutenberg and the most popular page builder Elementor that can easily drag-and-drop your ideas from the interface. Bosa is built with SEO, speed, and usability in mind with the multiple Header & Footer layouts, predesigned starter sites includes awesome Home & Inner Pages that is incredibly customizable and powerful enough to take a stand among the crowd. Bosa is compatible with all major plugins like WooCommerce, Yoast, Contact form 7, Mailchimp for WordPress, bbPress, etc. Looking for a Multipurpose theme? Look no further!
-Version: 1.6.2
+Version: 1.6.3
 Requires PHP: 5.6
-Tested up to: 6.8
+Tested up to: 6.9
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: bosa
 Tags: blog, portfolio, news, grid-Layout, one-column, two-columns, three-columns, flexible-header, left-sidebar, right-sidebar, custom-background, custom-colors, custom-logo, custom-menu, featured-images, footer-widgets, full-width-template, post-formats, rtl-language-support, theme-options, sticky-post, threaded-comments, translation-ready, block-styles, wide-blocks
 
-Bosa WordPress Theme, Copyright 2025 Bosa Themes
+Bosa WordPress Theme, Copyright 2026 Bosa Themes
 Bosa is distributed under the terms of the GNU General Public License v3
 
 Bosa is based on Underscores https://underscores.me/, (C) 2012-2017 Automattic, Inc.
@@ -397,23 +397,18 @@ h6 {
   h1 {
     font-size: 24px;
   }
-
   h2 {
     font-size: 22px;
   }
-
   h3 {
     font-size: 18px;
   }
-
   h4 {
     font-size: 14px;
   }
-
   h5 {
     font-size: 14px;
   }
-
   h6 {
     font-size: 14px;
   }
@@ -1263,7 +1258,7 @@ form label {
 }
 @media screen and (max-width: 575px) {
   .page-numbers .page-numbers,
-.nav-links .page-numbers {
+  .nav-links .page-numbers {
     font-size: 13px;
     width: 30px;
     height: 30px;
@@ -1325,13 +1320,13 @@ form label {
 }
 @media screen and (max-width: 575px) {
   .page-numbers .page-numbers.next, .page-numbers .page-numbers.prev,
-.nav-links .page-numbers.next,
-.nav-links .page-numbers.prev {
+  .nav-links .page-numbers.next,
+  .nav-links .page-numbers.prev {
     width: 45px;
   }
   .page-numbers .page-numbers.next span:before, .page-numbers .page-numbers.prev span:before,
-.nav-links .page-numbers.next span:before,
-.nav-links .page-numbers.prev span:before {
+  .nav-links .page-numbers.next span:before,
+  .nav-links .page-numbers.prev span:before {
     font-size: 13px;
   }
 }
@@ -1413,8 +1408,8 @@ form label {
 }
 @media screen and (max-width: 767px) {
   .comment-navigation .nav-previous,
-.posts-navigation .nav-previous,
-.post-navigation .nav-previous {
+  .posts-navigation .nav-previous,
+  .post-navigation .nav-previous {
     width: 100%;
   }
 }
@@ -1441,8 +1436,8 @@ form label {
 }
 @media screen and (max-width: 767px) {
   .comment-navigation .nav-previous ~ .nav-next,
-.posts-navigation .nav-previous ~ .nav-next,
-.post-navigation .nav-previous ~ .nav-next {
+  .posts-navigation .nav-previous ~ .nav-next,
+  .post-navigation .nav-previous ~ .nav-next {
     border-top: 1px solid #ececec;
     margin-top: 15px;
     padding-top: 15px;
@@ -1456,8 +1451,8 @@ form label {
 }
 @media screen and (max-width: 767px) {
   .comment-navigation .nav-next,
-.posts-navigation .nav-next,
-.post-navigation .nav-next {
+  .posts-navigation .nav-next,
+  .post-navigation .nav-next {
     float: left;
     width: 100%;
   }
@@ -1798,16 +1793,16 @@ body:not(.single) .attachment:active .featured-image a img {
 }
 @media screen and (max-width: 991px) {
   .post .entry-meta,
-.attachment .entry-meta,
-.banner-content .entry-meta {
+  .attachment .entry-meta,
+  .banner-content .entry-meta {
     font-size: 12px;
     margin-left: -5px;
     margin-right: -5px;
     margin-bottom: 15px;
   }
   .post .entry-meta > span,
-.attachment .entry-meta > span,
-.banner-content .entry-meta > span {
+  .attachment .entry-meta > span,
+  .banner-content .entry-meta > span {
     padding: 0 5px;
   }
 }
@@ -1904,8 +1899,8 @@ body:not(.single) .attachment:active .featured-image a img {
 }
 @media screen and (max-width: 991px) {
   .post .entry-meta .tag-links,
-.attachment .entry-meta .tag-links,
-.banner-content .entry-meta .tag-links {
+  .attachment .entry-meta .tag-links,
+  .banner-content .entry-meta .tag-links {
     padding-left: 6px;
     padding-right: 6px;
   }
@@ -1969,7 +1964,7 @@ body:not(.single) .attachment:active .featured-image a img {
 /*--post hover css--*/
 @media screen and (max-width: 991px) {
   .post .featured-image img,
-.page .featured-image img {
+  .page .featured-image img {
     width: 100%;
   }
 }
@@ -3145,8 +3140,8 @@ body.offcanvas-slide-open .offcanvas-overlay {
     padding-right: 90px;
   }
   .home .header-two:not(.sticky-header) .slicknav_icon span,
-.home .header-two:not(.sticky-header) .slicknav_icon span:first-child:before,
-.home .header-two:not(.sticky-header) .slicknav_icon span:first-child:after {
+  .home .header-two:not(.sticky-header) .slicknav_icon span:first-child:before,
+  .home .header-two:not(.sticky-header) .slicknav_icon span:first-child:after {
     background-color: #ffffff;
   }
   .header-two .mobile-menu-container .slicknav_menu .slicknav_btn {
@@ -3423,15 +3418,15 @@ body:not(.home) .site-header.header-ten .bottom-header {
 }
 @media screen and (max-width: 991px) {
   .header-cart,
-.header-my-account,
-.header-wishlist,
-.header-compare {
+  .header-my-account,
+  .header-wishlist,
+  .header-compare {
     padding-right: 5px;
   }
   .header-cart a,
-.header-my-account a,
-.header-wishlist a,
-.header-compare a {
+  .header-my-account a,
+  .header-wishlist a,
+  .header-compare a {
     font-size: 15px;
   }
 }
@@ -4319,17 +4314,15 @@ body.offcanvas-slide-open .header-thirteen #offcanvas-menu {
     margin-right: 20px;
     position: relative;
   }
-
   .header-category-nav,
-.header-category-nav .navbar-nav,
-.header-category-nav .navbar-nav > li {
+  .header-category-nav .navbar-nav,
+  .header-category-nav .navbar-nav > li {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-align: center;
     align-items: center;
     height: 100%;
   }
-
   /*header category show hide css*/
   .header-category-nav .navbar-nav .dropdown-menu {
     border: 1px solid rgba(243, 243, 243, 0.8);
@@ -4341,10 +4334,9 @@ body.offcanvas-slide-open .header-thirteen #offcanvas-menu {
     position: absolute;
     left: 0;
   }
-
   .header-category-nav .navbar-nav li:hover > .dropdown-menu,
-.header-category-nav .navbar-nav li:focus > .dropdown-menu,
-.header-category-nav .navbar-nav li:focus-within > .dropdown-menu {
+  .header-category-nav .navbar-nav li:focus > .dropdown-menu,
+  .header-category-nav .navbar-nav li:focus-within > .dropdown-menu {
     visibility: visible;
     border-radius: 0;
     transition: all 0.5s ease-in-out;
@@ -4353,7 +4345,6 @@ body.offcanvas-slide-open .header-thirteen #offcanvas-menu {
     -o-transition: all 0.5s ease-in-out;
     opacity: 1;
   }
-
   /*header category submenu css*/
   .header-category-nav ul ul {
     background-color: #ffffff;
@@ -4373,19 +4364,17 @@ body.offcanvas-slide-open .header-thirteen #offcanvas-menu {
     -o-animation: slide-up 0.3s ease-out;
     animation: slide-up 0.3s ease-out;
   }
-
   .header-category-nav ul ul li:hover > ul,
-.header-category-nav ul ul li:focus > ul,
-.header-category-nav ul ul li:active > ul,
-.header-category-nav ul ul li:focus-within > ul,
-.header-category-nav ul ul li.focus > ul {
+  .header-category-nav ul ul li:focus > ul,
+  .header-category-nav ul ul li:active > ul,
+  .header-category-nav ul ul li:focus-within > ul,
+  .header-category-nav ul ul li.focus > ul {
     display: block;
     top: -1px;
     left: 100%;
   }
-
   .header-category-nav ul ul li.menu-item-has-children > a:after,
-.header-category-nav ul ul li.page_item_has_children > a:after {
+  .header-category-nav ul ul li.page_item_has_children > a:after {
     content: "\f0da";
     display: inline-block;
     float: right;
@@ -4398,9 +4387,8 @@ body.offcanvas-slide-open .header-thirteen #offcanvas-menu {
     -webkit-transition: all 0.4s;
     transition: all 0.4s;
   }
-
   .header-category-nav .navbar-nav li li:hover > a:after,
-.header-category-nav .navbar-nav li li:focus > a:after {
+  .header-category-nav .navbar-nav li li:focus > a:after {
     -moz-transform: rotate(180deg);
     -webkit-transform: rotate(180deg);
     transform: rotate(180deg);
@@ -4423,7 +4411,6 @@ body.offcanvas-slide-open .header-thirteen #offcanvas-menu {
   .header-category-nav .navbar-nav .dropdown-menu {
     display: block;
   }
-
   .header-category-nav .navbar-nav > li > a {
     display: block;
   }
@@ -5476,11 +5463,11 @@ body.offcanvas-slide-open .header-thirteen #offcanvas-menu {
 
 @media screen and (min-width: 992px) {
   .site-layout-box,
-.site-layout-frame {
+  .site-layout-frame {
     position: relative;
   }
   .site-layout-box:before,
-.site-layout-frame:before {
+  .site-layout-frame:before {
     background-color: transparent;
     content: "";
     position: absolute;
@@ -5508,7 +5495,7 @@ body.offcanvas-slide-open .header-thirteen #offcanvas-menu {
 }
 @media screen and (min-width: 992px) {
   .site-layout-box .container,
-.site-layout-frame .container {
+  .site-layout-frame .container {
     padding-left: 15px;
     padding-right: 15px;
   }
@@ -6832,7 +6819,7 @@ body.site-layout-frame .header-ten .hgroup-wrap {
     width: 100%;
   }
   #sb_instagram #sbi_load .sbi_load_btn,
-#sb_instagram #sbi_load .sbi_follow_btn a {
+  #sb_instagram #sbi_load .sbi_follow_btn a {
     display: block;
     padding: 5px 10px;
   }
@@ -7248,7 +7235,7 @@ body .a2a_menu .a2a_menu_show_more_less span {
 }
 @media screen and (max-width: 575px) {
   .woocommerce .product_meta .posted_in a,
-.woocommerce .product_meta .tagged_as a {
+  .woocommerce .product_meta .tagged_as a {
     font-size: 12px;
   }
 }
@@ -8138,8 +8125,8 @@ body[class*=woocommerce] ul.products li .product-compare-wishlist .sp_preview_ar
 }
 @media screen and (max-width: 575px) {
   .summary .yith-wcwl-add-button a i,
-.woocommerce .entry-summary a.compare.button,
-.summary .yith-wcwl-add-to-wishlist i {
+  .woocommerce .entry-summary a.compare.button,
+  .summary .yith-wcwl-add-to-wishlist i {
     margin-left: 8px;
     width: 40px;
   }
@@ -8180,7 +8167,7 @@ body[class*=woocommerce] ul.products li .product-compare-wishlist .sp_preview_ar
 }
 @media screen and (max-width: 575px) {
   .summary .yith-add-to-wishlist-button-block a:has(svg),
-.summary .yith-wcwl-add-to-wishlist a:has(svg) {
+  .summary .yith-wcwl-add-to-wishlist a:has(svg) {
     margin-left: 8px;
     width: 40px;
   }
@@ -8451,7 +8438,7 @@ body[class*=woocommerce] ul.products li.product-list .woo-product-image img {
 
 @media screen and (min-width: 769px) {
   .woocommerce-page .yith-quick-view-content.woocommerce div.product .bsep-image,
-.woocommerce-page .yith-quick-view-content.woocommerce div.product .entry-summary {
+  .woocommerce-page .yith-quick-view-content.woocommerce div.product .entry-summary {
     width: 50%;
   }
 }
@@ -8543,7 +8530,7 @@ body[class*=woocommerce] ul.products li.product-list .woo-product-image img {
 #bosa-app-contact .wpcf7 input[type=text],
 #bosa-app-contact .wpcf7 input[type=email],
 #bosa-app-contact .wpcf7 textarea {
-  border: solid 1px #ff922261;
+  border: solid 1px rgba(255, 146, 34, 0.3803921569);
   border-radius: 25px;
   -webkit-border-radius: 25px;
   -o-border-radius: 25px;
